--- a/recommender/institutions/templates/institutions.html
+++ b/recommender/institutions/templates/institutions.html
@@ -140,71 +140,76 @@
         });
     </script>
 
+    <div class="bg-white pt-24">
 
-
-    {# SEARCH FORM #}
-    <form action="{% url "institutions:search_suggestions_institutions" %}" method="GET" class="max-w-md mx-auto"
-          id="search-form"
-          style="margin-top: 10rem">
-        {% csrf_token %}
-        <label for="default-search" class="mb-2 text-sm font-medium text-purple-900 sr-only">Search</label>
-        <div class="relative search-div">
-            <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-                <svg class="w-4 h-4 text-purple-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                     fill="none" viewBox="0 0 20 20">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                          stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-                </svg>
-            </div>
-            <input type="search" id="default-search" class="block w-full p-4 ps-10 text-sm text-purple-900 border
+        {# SEARCH FORM #}
+        <form action="{% url "institutions:search_suggestions_institutions" %}" method="GET" class="max-w-md mx-auto"
+              id="search-form"
+              style="margin-top: 10rem">
+            {% csrf_token %}
+            <label for="default-search" class="mb-2 text-sm font-medium text-purple-900 sr-only">Search</label>
+            <div class="relative search-div">
+                <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                    <svg class="w-4 h-4 text-purple-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                         fill="none" viewBox="0 0 20 20">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                              stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                    </svg>
+                </div>
+                <input type="search" id="default-search" class="block w-full p-4 ps-10 text-sm text-purple-900 border
                 border-purple-300 rounded-lg bg-purple-50 focus:ring-purple-500 focus:border-purple-500"
-                   placeholder="   &nbsp;&nbsp;Search for Degrees and Institutions..." required
-                   style="border-radius: 1rem; border: #5521b5;"/>
-            <button type="submit"
-                    class="text-white absolute end-2.5 bottom-2.5 bg-purple-700 hover:bg-purple-700 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2">
-                Search
-            </button>
+                       placeholder="   &nbsp;&nbsp;Search for Degrees and Institutions..." required
+                       style="border-radius: 1rem; border: #5521b5;"/>
+                <button type="submit"
+                        class="text-white absolute end-2.5 bottom-2.5 bg-purple-700 hover:bg-purple-700 focus:ring-4 focus:outline-none focus:ring-purple-300 font-medium rounded-lg text-sm px-4 py-2">
+                    Search
+                </button>
 
-            <!-- Dropdown to Show Results -->
-            <ul id="suggestions-list" class="suggestion-list"
-                style="position: absolute; width: 100%; background-color: white; border: 1px solid #ccc; display: none; margin-top: 3.42rem; ">
-            </ul>
-        </div>
-    </form>
+                <!-- Dropdown to Show Results -->
+                <ul id="suggestions-list" class="suggestion-list"
+                    style="position: absolute; width: 100%; background-color: white; border: 1px solid #ccc; display: none; margin-top: 3.42rem; ">
+                </ul>
+            </div>
+        </form>
 
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 items-stretch" style="margin-top: 10rem">
-        {% for institution in institution_data %}
-            <div class="relative p-6 bg-white border border-purple-500 rounded-lg shadow-sm hover:bg-gray-100 h-full flex flex-col justify-between">
-                <a href="{% url 'institutions:view_institution' institution.id %}" target="_blank" class="flex-1">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 truncate">
-                        {{ institution.institution_name }}
-                    </h5>
-                    <p class="font-normal text-gray-700">
-                        State: <span class="text-blue-500">{{ institution.state.name }}</span>
-                    </p>
-                    <p class="font-normal text-gray-700">
-                        District: <span class="text-blue-500">{{ institution.district.name }}</span>
-                    </p>
-                </a>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 items-stretch" style="margin-top: 10rem">
+            {% for institution in institution_data %}
+                <div class="relative p-6 bg-white border border-purple-500 rounded-lg shadow-sm hover:bg-gray-100 h-full flex flex-col justify-between">
+                    <a href="{% url 'institutions:view_institution' institution.id %}" target="_blank" class="flex-1">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 truncate">
+                            {{ institution.institution_name }}
+                        </h5>
+                        <p class="font-normal text-gray-700">
+                            State: <span class="text-blue-500">{{ institution.state.name }}</span>
+                        </p>
+                        <p class="font-normal text-gray-700">
+                            District: <span class="text-blue-500">{{ institution.district.name }}</span>
+                        </p>
+                    </a>
 
-                <!-- Bookmark Button Bottom Right -->
-                <div class="" style="position: absolute; left:26rem; top: 6rem;">
-                    <button type="button"
-                            class="bookmark-btn text-purple-700 hover:text-yellow-400"
-                            data-institution-id="{{ institution.id }}"
-                            title="Bookmark this institution">
-                        <i class="fa-solid fa-bookmark fa-lg" style="color: #5521b5;"></i>
-                    </button>
+                    <!-- Bookmark Button Bottom Right -->
+                    <div class="" style="position: absolute; left:26rem; top: 6rem;">
+                        <button type="button"
+                                class="bookmark-btn text-purple-700 hover:text-yellow-400"
+                                data-institution-id="{{ institution.id }}"
+                                title="Bookmark this institution">
+                            <i class="fa-solid fa-bookmark fa-lg" style="color: #5521b5;"></i>
+                        </button>
+
+                    </div>
+
 
                 </div>
+            {% empty %}
+                <p class="text-center text-gray-700 col-span-3">No institutions available.</p>
+            {% endfor %}
+        </div>
 
 
-            </div>
-        {% empty %}
-            <p class="text-center text-gray-700 col-span-3">No institutions available.</p>
-        {% endfor %}
     </div>
+
+
 
 
 
