adding top rated institution images

--- a/recommender/dashboard/templates/dashboard.html
+++ b/recommender/dashboard/templates/dashboard.html
@@ -318,7 +318,7 @@
                             <div class="course-card">
                                 <img
                                         class="course-image"
-                                        src="https://images.pexels.com/photos/256559/pexels-photo-256559.jpeg"
+                                        src="/media/top_rated_institutions/{{ institution.image_url }}"
                                         alt="{{ institution.institution_name }}"
                                         onerror="this.onerror=null;this.src='https://via.placeholder.com/400x200?text=No+Image';"
                                 />
