--- a/recommender/dashboard/templates/dashboard.html
+++ b/recommender/dashboard/templates/dashboard.html
@@ -231,36 +231,6 @@
             </div>
         </section>
 
-        <!-- OUR STREAMS SECTION -->
-        <section class="pt-24" id="our-streams">
-            <div class="max-w-screen-xl px-4 mx-auto">
-                <h2 class="text-3xl font-bold text-gray-900 mb-6 text-center">FIND YOUR PASSION</h2>
-
-                <div class="scroll-horizontal-wrapper auto-scroll py-4" style="padding: 1rem"
-                     onmouseenter="this.classList.add('scroll-pause')"
-                     onmouseleave="this.classList.remove('scroll-pause')">
-
-                    <div class="scroll-inner flex space-x-4 px-4">
-                        {% for stream in streams %}
-                            <div class="course-card w-[270px] min-w-[255px] bg-white rounded-lg shadow-md overflow-hidden" style="height: 15rem">
-                                <img
-                                        class="course-image w-full h-48 object-cover"
-                                        src="{{ MEDIA_URL }}{{ stream.image_url }}"
-                                        alt="{{ stream.stream_name }}"
-                                        onerror="this.onerror=null;this.src='https://via.placeholder.com/400x200?text=No+Image';"
-                                />
-                                <div class="course-content text-center p-4">
-                                    <h5 class="course-title text-md font-semibold text-gray-800">
-                                        {{ stream.stream_name }}
-                                    </h5>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </section>
-
 
         <!-- TOP RATED COURSES SECTION -->
         <section class="pt-24" id="top-rated-courses">
@@ -268,88 +238,7 @@
                 <h2 class="text-3xl font-bold text-gray-900 mb-6 text-center">TOP RATED COURSES</h2>
 
                 <!-- Correct Scroll Wrapper -->
-                <div class=" scroll-horizontal-wrapper auto-scroll" style="padding: 1rem" 
-                     onmouseenter="this.classList.add('scroll-pause')"
-                     onmouseleave="this.classList.remove('scroll-pause')">
-                    <div class="scroll-inner px-4">
-                        {% for course in top_ranked_courses %}
-                            <div class="course-card">
-                                <img
-                                        class="course-image"
-                                        src="{{ MEDIA_URL }}{{ course.image_url }}"
-                                        alt="{{ course.course_name }}"
-                                        onerror="this.onerror=null;this.src='https://via.placeholder.com/400x200?text=No+Image';"
-                                />
-
-                                <div class="course-content">
-                                    <h5 class="course-title">
-                                        <span class="course-rank">{{ course.rank }}.</span>
-                                        {{ course.course_name }}
-                                    </h5>
-                                    <a href="{% url 'institutions:view_course' course.id %}" class="read-more-button">
-                                        Read more
-                                        <svg class="w-3.5 h-3.5 ms-2" fill="none" stroke="currentColor" stroke-width="2"
-                                             viewBox="0 0 14 10" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round"
-                                                  d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                                        </svg>
-                                    </a>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-        <!-- TOP RATED INSTITUTIONS SECTION -->
-        <section class="pt-24" id="top-rated-courses">
-            <div class="max-w-screen-xl px-4 mx-auto">
-                <h2 class="text-3xl font-bold text-gray-900 mb-6 text-center">TOP RATED INSTITUTIONS</h2>
-
-                <!-- Horizontal Scroll Wrapper -->
-                <div class=" class= max-w-screen-xl px-4 mx-auto scroll-wrapper scroll-horizontal-wrapper auto-scroll" style="padding: 1rem" 
-                     onmouseenter="this.classList.add('scroll-pause')"
-                     onmouseleave="this.classList.remove('scroll-pause')">
-
-                    <div class="scroll-inner">
-                        {% for institution in top_ranked_institutions %}
-                            <div class="course-card">
-                                <img
-                                        class="course-image"
-                                        src="/media/top_rated_institutions/{{ institution.image_url }}"
-                                        alt="{{ institution.institution_name }}"
-                                        onerror="this.onerror=null;this.src='https://via.placeholder.com/400x200?text=No+Image';"
-                                />
-                                <div class="course-content">
-                                    <h5 class="course-title">
-                                        <span class="course-rank">{{ institution.rank }}.</span>
-                                        {{ institution.institution_name }}
-                                    </h5>
-                                    <a href="{% url 'institutions:view_institution' institution.id %}"
-                                       class="read-more-button">
-                                        Read more
-                                        <svg class="w-3.5 h-3.5 ms-2" fill="none" stroke="currentColor" stroke-width="2"
-                                             viewBox="0 0 14 10" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round"
-                                                  d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                                        </svg>
-                                    </a>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- TOP RECOMMENDED COURSES SECTION -->
-        <section class="pt-24" id="top-rated-courses">
-            <div class="max-w-screen-xl px-4 mx-auto">
-                <h2 class="text-3xl font-bold text-gray-900 mb-6 text-center">TOP RECOMMENDED COURSES</h2>
-
-                <div class=" scroll-horizontal-wrapper auto-scroll" style="padding: 1rem" 
+                <div class=" scroll-horizontal-wrapper auto-scroll"
                      onmouseenter="this.classList.add('scroll-pause')"
                      onmouseleave="this.classList.remove('scroll-pause')">
                     <div class="scroll-inner px-4">
@@ -383,13 +272,13 @@
         </section>
 
 
-        <!-- TOP RECOMMENDED INSTITUTIONS SECTION -->
+        <!-- TOP RATED INSTITUTIONS SECTION -->
         <section class="pt-24" id="top-rated-courses">
             <div class="max-w-screen-xl px-4 mx-auto">
-                <h2 class="text-3xl font-bold text-gray-900 mb-6 text-center">TOP RECOMMENDED INSTITUTIONS</h2>
+                <h2 class="text-3xl font-bold text-gray-900 mb-6 text-center">TOP RATED INSTITUTIONS</h2>
 
                 <!-- Horizontal Scroll Wrapper -->
-                <div class=" class= max-w-screen-xl px-4 mx-auto scroll-wrapper scroll-horizontal-wrapper auto-scroll" style="padding: 1rem" 
+                <div class=" class= max-w-screen-xl px-4 mx-auto scroll-wrapper scroll-horizontal-wrapper auto-scroll"
                      onmouseenter="this.classList.add('scroll-pause')"
                      onmouseleave="this.classList.remove('scroll-pause')">
 
@@ -405,6 +294,84 @@
                                 <div class="course-content">
                                     <h5 class="course-title">
                                         <span class="course-rank">{{ institution.rank }}.</span>
+                                        {{ institution.institution_name }}
+                                    </h5>
+                                    <a href="{% url 'institutions:view_institution' institution.id %}"
+                                       class="read-more-button">
+                                        Read more
+                                        <svg class="w-3.5 h-3.5 ms-2" fill="none" stroke="currentColor" stroke-width="2"
+                                             viewBox="0 0 14 10" xmlns="http://www.w3.org/2000/svg">
+                                            <path stroke-linecap="round" stroke-linejoin="round"
+                                                  d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- TOP RECOMMENDED COURSES SECTION -->
+        <section class="pt-24" id="top-rated-courses">
+            <div class="max-w-screen-xl px-4 mx-auto">
+                <h2 class="text-3xl font-bold text-gray-900 mb-6 text-center">TOP RECOMMENDED COURSES</h2>
+
+                <div class=" scroll-horizontal-wrapper auto-scroll"
+                     onmouseenter="this.classList.add('scroll-pause')"
+                     onmouseleave="this.classList.remove('scroll-pause')">
+                    <div class="scroll-inner px-4">
+                        {% for course in course_hybrid %}
+                            <div class="course-card">
+                                <img
+                                        class="course-image"
+                                        src="{{ course.image_url }}"
+                                        alt="{{ course.course_name }}"
+                                        onerror="this.onerror=null;this.src='https://via.placeholder.com/400x200?text=No+Image';"
+                                />
+                                <div class="course-content">
+                                    <h5 class="course-title">
+                                        {{ course.course_name }}
+                                    </h5>
+                                    <a href="{% url 'institutions:view_course' course.id %}" class="read-more-button">
+                                        Read more
+                                        <svg class="w-3.5 h-3.5 ms-2" fill="none" stroke="currentColor" stroke-width="2"
+                                             viewBox="0 0 14 10" xmlns="http://www.w3.org/2000/svg">
+                                            <path stroke-linecap="round" stroke-linejoin="round"
+                                                  d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- TOP RECOMMENDED INSTITUTIONS SECTION -->
+        <section class="pt-24" id="top-rated-courses">
+            <div class="max-w-screen-xl px-4 mx-auto">
+                <h2 class="text-3xl font-bold text-gray-900 mb-6 text-center">TOP RECOMMENDED INSTITUTIONS</h2>
+
+                <!-- Horizontal Scroll Wrapper -->
+                <div class=" class= max-w-screen-xl px-4 mx-auto scroll-wrapper scroll-horizontal-wrapper auto-scroll"
+                     onmouseenter="this.classList.add('scroll-pause')"
+                     onmouseleave="this.classList.remove('scroll-pause')">
+
+                    <div class="scroll-inner">
+                        {% for institution in institution_hybrid %}
+                            <div class="course-card">
+                                <img
+                                        class="course-image"
+                                        src="https://images.pexels.com/photos/256559/pexels-photo-256559.jpeg"
+                                        alt="{{ institution.institution_name }}"
+                                        onerror="this.onerror=null;this.src='https://via.placeholder.com/400x200?text=No+Image';"
+                                />
+                                <div class="course-content">
+                                    <h5 class="course-title">
                                         {{ institution.institution_name }}
                                     </h5>
                                     <a href="{% url 'institutions:view_institution' institution.id %}"
