--- a/recommender/institutions/templates/institutions.html
+++ b/recommender/institutions/templates/institutions.html
@@ -174,8 +174,36 @@
             </div>
         </form>
 
+        <h4 class="p-6">Recommended for you</h4>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 items-stretch">
+            {% for institution in recommend_institution %}
+                <div class="relative p-6 bg-white border border-purple-500 rounded-lg shadow-sm hover:bg-gray-100 h-full flex flex-col justify-between">
+                    <a href="{% url 'institutions:view_institution' institution.id %}" target="_blank" class="flex-1">
+                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 truncate">
+                            {{ institution.institution_name }}
+                        </h5>
+                        <p class="font-normal text-gray-700">
+                            State: <span class="text-blue-500">{{ institution.state.name }}</span>
+                        </p>
+                        <p class="font-normal text-gray-700">
+                            District: <span class="text-blue-500">{{ institution.district.name }}</span>
+                        </p>
+                    </a>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 items-stretch" style="margin-top: 10rem">
+                    <!-- Bookmark Button Bottom Right -->
+                    <div class="" style="position: absolute; left:26rem; top: 6rem;">
+                        <button type="button"
+                                class="bookmark-btn text-purple-700 hover:text-yellow-400"
+                                data-institution-id="{{ institution.id }}"
+                                title="Bookmark this institution">
+                            <i class="{% if institution.is_favourited %}fa-solid{% else %}fa-regular{% endif %} fa-bookmark fa-lg" style="color: #5521b5;"></i>
+                        </button>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <h4 class="p-6 mt-12">All institutions</h4>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 items-stretch">
             {% for institution in institution_data %}
                 <div class="relative p-6 bg-white border border-purple-500 rounded-lg shadow-sm hover:bg-gray-100 h-full flex flex-col justify-between">
                     <a href="{% url 'institutions:view_institution' institution.id %}" target="_blank" class="flex-1">
